# Mub7t-collage-mobile-pro

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
ai_training/: site_vendors.csv
services/: ocr_service.py  openai_report_service.py  parser_service.py  photo_combiner_service.py  report_service.py  supervisor_image_service.py
src/collage_mobile_pro.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/collage_web/: app.py  builder.py  compression.py  config.py  forms.py  routes.py  text_utils.py  utils.py
src/collage_web/static/css/: style.css
src/collage_web/static/js/: app.js
src/collage_web/templates/: base.html  index.html
static/css/: style.css
static/js/: main.js
templates/: combine_photos.html  combine_preview.html  index.html  login.html  preventive_table.html  report_preview.html  review.html  supervisor_preview.html  supervisor_upload.html  upload.html
tests/: test_utils.py
